force-app/main/default/objects/Secondary_Target__c/Secondary_Target__c.object-meta.xml
<CustomObject>
    <label>Secondary Target</label>
    <nameField>
        <displayFormat>STGT-{0000}</displayFormat>
        <label>Secondary Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secondary Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>