force-app/main/default/objects/Secondary_Target__c/fields/Achievement_Percent__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Percent__c</fullName>
    <label>Achievement Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>