force-app/main/default/objects/Secondary_Target__c/fields/Daily_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Daily_Achievement__c</fullName>
    <label>Daily Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>