force-app/main/default/objects/Secondary_Target__c/fields/Focused_Pack__c.field-meta.xml
<CustomField>
    <fullName>Focused_Pack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Focused Pack</label>
    <referenceTo>Focused_Pack__c</referenceTo>
    <relationshipLabel>Secondary Targets</relationshipLabel>
    <relationshipName>Secondary_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>