force-app/main/default/objects/Secondary_Target__c/fields/Pending_Target__c.field-meta.xml
<CustomField>
    <fullName>Pending_Target__c</fullName>
    <label>Pending Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>