force-app/main/default/objects/Secondary_Target__c/fields/Target_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Target_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Criteria</label>
    <referenceTo>Target_Criteria__c</referenceTo>
    <relationshipLabel>Secondary Targets</relationshipLabel>
    <relationshipName>Secondary_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>